--- a/covid19-tracker/src/app/components/countries/countries.component.html
+++ b/covid19-tracker/src/app/components/countries/countries.component.html
@@ -53,7 +53,7 @@
       </table>
     </div>
     <div class="col">
-      <google-chart></google-chart>
+      <google-chart [data]="lineChart"></google-chart>
     </div>
   </div>
 </div>
