--- a/covid19-tracker/src/app/components/home/home.component.html
+++ b/covid19-tracker/src/app/components/home/home.component.html
@@ -88,9 +88,9 @@
 
 <div class="row">
   <div class="col">
-    <google-chart [data]="ColumnChart"></google-chart>
+    <google-chart [data]="columnChart"></google-chart>
   </div>
   <div class="col">
-    <google-chart [data]="PieChart"></google-chart>
+    <google-chart [data]="pieChart"></google-chart>
   </div>
 </div>
