--- a/covid19-tracker/src/app/components/home/home.component.html
+++ b/covid19-tracker/src/app/components/home/home.component.html
@@ -87,10 +87,10 @@
 </div>
 
 <div class="row">
-  <div class="col">
+  <div class="col-6">
     <google-chart [data]="columnChart"></google-chart>
   </div>
-  <div class="col">
+  <div class="col-6">
     <google-chart [data]="pieChart"></google-chart>
   </div>
 </div>
